フォームの訂正をしました。

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
           <h1 class="title">アカウント作成</h1>
           <div class="contents">
             <div class="Facebook">
-              <a href="#!" class="button is-facebook">Facebookでスタート</a>
+              <a href="#" class="button is-facebook">Facebookでスタート</a>
             </div>
             <div class=Google>
-              <a href="#!" class="button is-google">Googleでスタート</a>
+              <a href="#" class="button is-google">Googleでスタート</a>
             </div>
           </div>
           <p class="contents-text">タイムラインへ投稿を行うことや、アカウント情報を伝えることはありません。</p>
@@ -89,25 +89,25 @@
               <p class="label-text">
                 パスワード(確認用)<span class="alert"> ※</span>
               </p>
-              <input type="password" class="input-area" name="password" required>            
+              <input type="password" class="input-area" name="password-confirmation" required>            
             </div>
             <div class="checkbox">
               <p class="label-text">希望コース</p>
               <div class="checkbox-option">
-                <input type="checkbox" name="checkbox" value="frontend" id="frontend">
+                <input type="checkbox" name="frontend" value="frontend" id="frontend">
                 <label class="checkbox-option-text" for="frontend">
                   フロントエンド
                 </label>
               </div>
               <div class="checkbox-option">
-                <input type="checkbox" name="checkbox" value="backend" 
+                <input type="checkbox" name="backend" value="backend" 
                 id="backend">
                 <label class="checkbox-option-text" for="backend">
                   バックエンド
                 </label>
               </div>
               <div class="checkbox-option">
-                <input type="checkbox" name="checkbox" value="app" id="app">
+                <input type="checkbox" name="app" value="app" id="app">
                 <label class="checkbox-option-text" for="app">
                   アプリ
                 </label>
@@ -118,7 +118,7 @@
               <textarea class="input-area" name="text-area" placeholder="何かあればご記入ください"></textarea>
             </div>
             <div class="done">
-              <input type="submit" value="アカウント作成" class="done-button button">
+              <input type="submit" value="アカウント作成" class="done-button input-init button">
             </div>
             <p class="agree">
               アカウントを作成することにより、<a class="link" href>利用規約</a>と<a class="link" href>プライバシーポリシー</a>に同意するものとします。
